added Ridge Regression

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,10 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022/12/31 14:22:08 INFO mlflow.tracking.fluent: Experiment with name 'test' does not exist. Creating a new experiment.\n"
+     ]
+    }
+   ],
    "source": [
+    "exp_name = \"test\"\n",
+    "\n",
     "if not os.path.exists(local_path_save):\n",
     "    os.makedirs(local_path_save)\n",
     "\n",
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +70,9 @@
       "df shape (3576, 20)\n",
       "###################### training  lr model #########################\n",
       "rmse_train =  3.340266027366716 \n",
-      " rmse_test 16291.005898020625\n",
+      " rmse_test 16291.005898020625 \n",
+      " mae_train 2.3235100430914657 \n",
+      " mae_test 513.3030565867936\n",
       "###################### training  gb model #########################\n",
       "  0%|                                                                            | 0/5 [00:00<?, ?trial/s, best loss=?]"
      ]
@@ -102,10 +114,10 @@
       "4.811105416116507                                                                                                      \n",
       "rmse_test                                                                                                              \n",
       "4.595740677100895                                                                                                      \n",
-      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.33s/trial, best loss: 4.430555283720094]\n",
+      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.25s/trial, best loss: 4.430555283720094]\n",
       "###################### training  rf model #########################\n",
       "rmse_train =                                                                                                           \n",
-      "5.031955091873343                                                                                                      \n",
+      "5.031955091873342                                                                                                      \n",
       "                                                                                                                       \n",
       " rmse_test\n",
       "4.687997774501628                                                                                                      \n",
@@ -115,12 +127,12 @@
       " rmse_test\n",
       "4.544265942561309                                                                                                      \n",
       "rmse_train =                                                                                                           \n",
-      "4.8731600008234155                                                                                                     \n",
+      "4.873160000823415                                                                                                      \n",
       "                                                                                                                       \n",
       " rmse_test\n",
       "4.559212809027804                                                                                                      \n",
       "rmse_train =                                                                                                           \n",
-      "4.408765401413204                                                                                                      \n",
+      "4.408765401413205                                                                                                      \n",
       "                                                                                                                       \n",
       " rmse_test\n",
       "4.144407582815977                                                                                                      \n",
@@ -128,8 +140,8 @@
       "4.965553258115242                                                                                                      \n",
       "                                                                                                                       \n",
       " rmse_test\n",
-      "4.61574798306478                                                                                                       \n",
-      "100%|███████████████████████████████████████████████████| 5/5 [00:05<00:00,  1.06s/trial, best loss: 4.144407582815977]\n",
+      "4.615747983064779                                                                                                      \n",
+      "100%|███████████████████████████████████████████████████| 5/5 [00:05<00:00,  1.01s/trial, best loss: 4.144407582815977]\n",
       "###################### training  xgb model #########################\n",
       "[0]\tvalidation_0-rmse:10.62335\tvalidation_1-rmse:10.36906                                                              \n",
       "[1]\tvalidation_0-rmse:9.93448\tvalidation_1-rmse:9.73521                                                                \n",
@@ -187,7 +199,7 @@
       "3.98001149463269                                                                                                       \n",
       "rmse_test                                                                                                              \n",
       "5.144965253294009                                                                                                      \n",
-      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.29s/trial, best loss: 4.669732792790688]\n"
+      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.28s/trial, best loss: 4.669732792790688]\n"
      ]
     },
     {
@@ -196,7 +208,7 @@
        "{'eta': 0.44838218635600224, 'max_depth': 1}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
