added Lasso Regression

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,19 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022/12/31 14:22:08 INFO mlflow.tracking.fluent: Experiment with name 'test' does not exist. Creating a new experiment.\n"
+      "2023/01/02 10:42:45 INFO mlflow.tracking.fluent: Experiment with name 'test1' does not exist. Creating a new experiment.\n"
      ]
     }
    ],
    "source": [
-    "exp_name = \"test\"\n",
+    "exp_name = \"test1\"\n",
     "\n",
     "if not os.path.exists(local_path_save):\n",
     "    os.makedirs(local_path_save)\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -74,21 +74,6 @@
       " mae_train 2.3235100430914657 \n",
       " mae_test 513.3030565867936\n",
       "###################### training  gb model #########################\n",
-      "  0%|                                                                            | 0/5 [00:00<?, ?trial/s, best loss=?]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "                                                                                                                       \n",
       " rmse_train = \n",
       "5.040272642618933                                                                                                      \n",
@@ -114,25 +99,25 @@
       "4.811105416116507                                                                                                      \n",
       "rmse_test                                                                                                              \n",
       "4.595740677100895                                                                                                      \n",
-      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.25s/trial, best loss: 4.430555283720094]\n",
+      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.29s/trial, best loss: 4.430555283720094]\n",
       "###################### training  rf model #########################\n",
       "rmse_train =                                                                                                           \n",
-      "5.031955091873342                                                                                                      \n",
+      "5.031955091873343                                                                                                      \n",
       "                                                                                                                       \n",
       " rmse_test\n",
-      "4.687997774501628                                                                                                      \n",
+      "4.687997774501629                                                                                                      \n",
       "rmse_train =                                                                                                           \n",
-      "4.86159297964427                                                                                                       \n",
+      "4.861592979644269                                                                                                      \n",
       "                                                                                                                       \n",
       " rmse_test\n",
       "4.544265942561309                                                                                                      \n",
       "rmse_train =                                                                                                           \n",
-      "4.873160000823415                                                                                                      \n",
+      "4.8731600008234155                                                                                                     \n",
       "                                                                                                                       \n",
       " rmse_test\n",
       "4.559212809027804                                                                                                      \n",
       "rmse_train =                                                                                                           \n",
-      "4.408765401413205                                                                                                      \n",
+      "4.408765401413204                                                                                                      \n",
       "                                                                                                                       \n",
       " rmse_test\n",
       "4.144407582815977                                                                                                      \n",
@@ -141,7 +126,7 @@
       "                                                                                                                       \n",
       " rmse_test\n",
       "4.615747983064779                                                                                                      \n",
-      "100%|███████████████████████████████████████████████████| 5/5 [00:05<00:00,  1.01s/trial, best loss: 4.144407582815977]\n",
+      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.27s/trial, best loss: 4.144407582815977]\n",
       "###################### training  xgb model #########################\n",
       "[0]\tvalidation_0-rmse:10.62335\tvalidation_1-rmse:10.36906                                                              \n",
       "[1]\tvalidation_0-rmse:9.93448\tvalidation_1-rmse:9.73521                                                                \n",
@@ -167,13 +152,7 @@
       "[1]\tvalidation_0-rmse:4.65358\tvalidation_1-rmse:5.45838                                                                \n",
       "[2]\tvalidation_0-rmse:3.61029\tvalidation_1-rmse:4.78413                                                                \n",
       "[3]\tvalidation_0-rmse:3.15794\tvalidation_1-rmse:4.69823                                                                \n",
-      "[4]\tvalidation_0-rmse:2.94863\tvalidation_1-rmse:4.66973                                                                \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[4]\tvalidation_0-rmse:2.94863\tvalidation_1-rmse:4.66973                                                                \n",
       "                                                                                                                       \n",
       " rmse_train = \n",
       "2.948631454439178                                                                                                      \n",
@@ -199,7 +178,7 @@
       "3.98001149463269                                                                                                       \n",
       "rmse_test                                                                                                              \n",
       "5.144965253294009                                                                                                      \n",
-      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.28s/trial, best loss: 4.669732792790688]\n"
+      "100%|███████████████████████████████████████████████████| 5/5 [00:06<00:00,  1.36s/trial, best loss: 4.669732792790688]\n"
      ]
     },
     {
@@ -208,7 +187,7 @@
        "{'eta': 0.44838218635600224, 'max_depth': 1}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
