--- a/01_Linear_Regression.ipynb
+++ b/01_Linear_Regression.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "36445b86",
    "metadata": {},
    "outputs": [],
    "source": [
     "import mlflow\n",
     "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from pickle import dump\n",
     "\n",
@@ -23,7 +29,17 @@
     "from scripts.monitoring import Monitoring\n",
     "from scripts.config_regression import (year_month_train, \n",
     "    input_data_path_train,\n",
-    "    local_path_save)"
+    "    seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "36b31eef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_path_save = './local_artifacts_tmp/01_Linear_Regression/'"
    ]
   },
   {
@@ -36,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "ebde894d",
    "metadata": {},
    "outputs": [],
@@ -55,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "569c1085",
    "metadata": {},
    "outputs": [],
@@ -74,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "6a8dc721",
    "metadata": {
     "scrolled": true
@@ -96,18 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "79a07ae9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def objective_lr(X_train, X_test, Y_train, Y_test):\n",
+    "def objective_lr(X_train, X_test, Y_train, Y_test, run_name: str = 'Unnamed'):\n",
     "    '''\n",
     "    Fitting function for Linear Regression\n",
     "    '''\n",
-    "    with mlflow.start_run():\n",
+    "    with mlflow.start_run(run_name=run_name):\n",
     "        mlflow.set_tag('model_type','LinearRegression')\n",
     "        mlflow.set_tag('year_month',year_month)\n",
+    "        \n",
     "        mlflow.log_param('model_type','LinearRegression')\n",
     "        mlflow.log_param('data',input_data_path)\n",
     "\n",
@@ -131,7 +148,7 @@
     "              '\\n mae_train', mae_train,\n",
     "              '\\n mae_test', mae_test)\n",
     "\n",
-    "        mlflow.log_artifact(local_path = local_path_save+\"ohe.pkl\", artifact_path='preprocessing') \n",
+    "        mlflow.log_artifact(local_path = local_path_save + run_name + '_ohe.pkl', artifact_path='preprocessing') \n",
     "        mlflow.sklearn.log_model(lr, artifact_path='model')\n",
     "    \n",
     "    return {'loss': rmse_test, 'status': STATUS_OK}\n",
@@ -140,28 +157,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cd22cc8",
+   "id": "7c9e386a",
    "metadata": {},
    "source": [
-    "### Experiment"
+    "## Experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f28071e",
+   "metadata": {},
+   "source": [
+    "### Experiment 1: base (keeping all observations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "id": "96c6a53b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_name = \"base\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "9e387976",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "df shape (3576, 20)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prepr = Preprocess(input_data_path_train)\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
@@ -170,15 +197,15 @@
     "\n",
     "#preprocessing ohe\n",
     "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
-    "X_train_ohe, ohe = prepr.preprocess(df=X_train, fit_ohe=True)\n",
-    "X_test_ohe, _ = prepr.preprocess(df=X_test, fit_ohe=False, ohe=ohe)\n",
+    "X_train_ohe, ohe = prepr.preprocess(df=X_train, fit_ohe=True, drop_first_column=False)\n",
+    "X_test_ohe, _ = prepr.preprocess(df=X_test, fit_ohe=False, drop_first_column=False, ohe=ohe)\n",
     "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
-    "dump(ohe, open(local_path_save+'ohe.pkl', 'wb'))"
+    "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "6094dc2e",
    "metadata": {
     "scrolled": true
@@ -195,12 +222,20 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/davideposillipo/.pyenv/versions/3.10.9/envs/mlops/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "{'loss': 16291.005898020625, 'status': 'ok'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +244,84 @@
     "objective_lr(X_train=X_train_ohe,\n",
     "             X_test=X_test_ohe,\n",
     "             Y_train=Y_train,\n",
-    "             Y_test=Y_test)"
+    "             Y_test=Y_test,\n",
+    "             run_name=run_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ff3921a",
+   "metadata": {},
+   "source": [
+    "### Experiment 2: no outliers (removing outliers from trip_distance)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01c5dcb2",
+   "id": "8f0eb2de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "run_name = \"no_outliers\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "564d0a93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prepr = Preprocess(input_data_path_train)\n",
+    "X, Y = prepr.read_dataframe(request_tgt=True)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)\n",
+    "\n",
+    "X_train.loc[X_train['trip_distance']>1000, 'trip_distance'] = X_train['trip_distance'].median()\n",
+    "\n",
+    "#preprocessing ohe\n",
+    "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
+    "X_train_ohe, ohe = prepr.preprocess(df=X_train, fit_ohe=True, drop_first_column=False)\n",
+    "X_test_ohe, _ = prepr.preprocess(df=X_test, fit_ohe=False, drop_first_column=False, ohe=ohe)\n",
+    "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
+    "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "88022b32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse_train =  3.340266027366716 \n",
+      " rmse_test 84.88740387525604 \n",
+      " mae_train 2.3235100430914657 \n",
+      " mae_test 5.209576851415573\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': 84.88740387525604, 'status': 'ok'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objective_lr(X_train=X_train_ohe,\n",
+    "             X_test=X_test_ohe,\n",
+    "             Y_train=Y_train,\n",
+    "             Y_test=Y_test,\n",
+    "             run_name=run_name)"
+   ]
   }
  ],
  "metadata": {
