--- a/02.3_Regularized_Linear_Regression_ElasticNet.ipynb
+++ b/02.3_Regularized_Linear_Regression_ElasticNet.ipynb
@@ -10,17 +10,15 @@
     "import mlflow\n",
     "import os\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from pickle import dump\n",
     "\n",
+    "from hyperopt import fmin, tpe, Trials, STATUS_OK, hp, space_eval\n",
+    "from functools import partial\n",
+    "\n",
     "from scripts.preprocessing_regression_models import Preprocess\n",
     "from scripts.LinearRegressionTraining import LinearRegressionTraining\n",
-    "\n",
     "from scripts.config_regression import (year_month_train,\n",
     "    model_name_pref,\n",
     "    input_data_path_train,\n",
@@ -30,11 +28,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c16f8380",
+   "id": "4d3016c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_path_save = './local_artifacts_tmp/00_Regression_Baseline/'\n",
+    "local_path_save = './local_artifacts_tmp/02_3_ElasticNet_Regression/'\n",
     "year_month = year_month_train\n",
     "input_data_path = input_data_path_train"
    ]
@@ -61,7 +59,7 @@
     "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
     "\n",
     "# Name of the experiment\n",
-    "exp_name = \"00 - Regression Baseline\"\n",
+    "exp_name = \"02.3 - Regularized Linear Regression - Elastic Net\"\n",
     "# set up MlFlow axperiment\n",
     "experiment_id = mlflow.set_experiment(exp_name)"
    ]
@@ -71,13 +69,13 @@
    "id": "9cd22cc8",
    "metadata": {},
    "source": [
-    "## Experiments"
+    "### Experiment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6727a4",
+   "id": "babd4fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,15 +85,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5982560",
+   "id": "9f666d88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_regression_training = LinearRegressionTraining(\n",
+    "elastic_net_regression_training = LinearRegressionTraining(\n",
     "    input_data_path,\n",
     "    local_path_save,\n",
     "    year_month,\n",
-    "    'baseline_regression')"
+    "    'elastic_net')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4f2e9f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_evals = 10\n",
+    "\n",
+    "# Here we can decide which hyperparameters we want to tune\n",
+    "# For the Elastic Net regression, alpha tunes the amount of regularization\n",
+    "# Alpha = 0 means no regularization == Linear Regression\n",
+    "# l1_ratio is the mixing parameter: 0 means only L2 reg, 1 means only L1 reg\n",
+    "elastic_net_parameters_search = {\n",
+    "    'alpha': hp.lognormal('alpha', 0, 1),\n",
+    "    'l1_ratio': hp.uniform('l1_ratio', 0, 1),\n",
+    "    'random_state': seed\n",
+    "}\n",
+    "\n",
+    "elastic_net_regression_training.set_hyperparameter_space(elastic_net_parameters_search)"
    ]
   },
   {
@@ -107,43 +127,20 @@
    },
    "outputs": [],
    "source": [
+    "#### Data Preprocessing ####\n",
+    "\n",
     "prepr = Preprocess(input_data_path_train)\n",
     "X, Y = prepr.read_dataframe(request_tgt=True)\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.3, random_state=seed)\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=seed)\n",
     "\n",
     "#preprocessing ohe\n",
     "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
     "X_train_ohe, ohe = prepr.preprocess(df=X_train, fit_ohe=True)\n",
     "X_test_ohe, _ = prepr.preprocess(df=X_test, fit_ohe=False, ohe=ohe)\n",
+    "\n",
     "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
     "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35bf80f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure()\n",
-    "fig.subplots_adjust(hspace=0.4, wspace=0.4)\n",
-    "ax = fig.add_subplot(1, 2, 1)\n",
-    "sns.histplot(Y_train,ax=ax).set_title('Y training set')\n",
-    "ax = fig.add_subplot(1, 2, 2)\n",
-    "sns.histplot(Y_test,ax=ax).set_title('Y test set')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a35a85e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_train.describe()"
    ]
   },
   {
@@ -155,13 +152,63 @@
    },
    "outputs": [],
    "source": [
-    "baseline_regression_training.calculate_regression_baseline(Y_train=Y_train, Y_test=Y_test, run_name=run_name)"
+    "trials = Trials()\n",
+    "\n",
+    "best_result = fmin(\n",
+    "    fn=partial(elastic_net_regression_training.objective_lr_elastic_net, \n",
+    "        X_train=X_train_ohe,\n",
+    "        X_test=X_test_ohe,\n",
+    "        Y_train=Y_train,\n",
+    "        Y_test=Y_test,\n",
+    "        run_name=run_name),\n",
+    "    space=elastic_net_parameters_search,\n",
+    "    algo=tpe.suggest,\n",
+    "    max_evals=max_evals,\n",
+    "    trials=trials,\n",
+    "    rstate=np.random.default_rng(seed)\n",
+    ")\n",
+    "\n",
+    "best_result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058d4e44",
+   "id": "f8ed7288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import enet_path\n",
+    "alphas_enet, coefs_enet, _ = enet_path(X_train_ohe, Y_train, n_alphas=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "223ef20f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from itertools import cycle\n",
+    "\n",
+    "colors = cycle([\"b\", \"r\", \"g\", \"c\", \"k\"])\n",
+    "neg_log_alphas_enet = -np.log10(alphas_enet)\n",
+    "\n",
+    "for coef_en, c in zip(coefs_enet, colors):\n",
+    "    l1 = plt.plot(neg_log_alphas_enet, coef_en, c=c)\n",
+    "    \n",
+    "\n",
+    "plt.xlabel(\"-Log(alpha)\")\n",
+    "plt.ylabel(\"coefficients\")\n",
+    "plt.title(\"Elastic Net Path\")\n",
+    "plt.axis(\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07ac66a8",
    "metadata": {},
    "outputs": [],
    "source": []
