--- a/02.4_Comparing_LinearRegression_Models.ipynb
+++ b/02.4_Comparing_LinearRegression_Models.ipynb
@@ -11,7 +11,6 @@
     "import os\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import Ridge \n",
     "\n",
     "from pickle import dump\n",
     "\n",
@@ -20,9 +19,24 @@
     "\n",
     "from scripts.preprocessing_regression_models import Preprocess\n",
     "from scripts.LinearRegressionTraining import LinearRegressionTraining\n",
-    "from scripts.config_regression import (year_month_train, \n",
+    "\n",
+    "from scripts.model_registry import ModelRegistry\n",
+    "from scripts.config_regression import (year_month_train,\n",
+    "    model_name_pref,\n",
     "    input_data_path_train,\n",
     "    seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb8cf94f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_path_save = './local_artifacts_tmp/02_4_LinearRegression_comparison/'\n",
+    "year_month = year_month_train\n",
+    "input_data_path = input_data_path_train"
    ]
   },
   {
@@ -31,18 +45,6 @@
    "metadata": {},
    "source": [
     "### MLFlow setting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98adcfb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "local_path_save = './local_artifacts_tmp/02_1_Ridge_Regression/'\n",
-    "year_month = year_month_train\n",
-    "input_data_path = input_data_path_train"
    ]
   },
   {
@@ -59,7 +61,7 @@
     "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
     "\n",
     "# Name of the experiment\n",
-    "exp_name = \"02.1 - Regularized Linear Regression - Ridge\"\n",
+    "exp_name = \"02.3 - LR comparison\"\n",
     "# set up MlFlow axperiment\n",
     "experiment_id = mlflow.set_experiment(exp_name)"
    ]
@@ -69,13 +71,13 @@
    "id": "9cd22cc8",
    "metadata": {},
    "source": [
-    "## Experiments"
+    "### Experiment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f0bfd62",
+   "id": "babd4fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,27 +87,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4275cab",
+   "id": "6e5a94b6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "linear_regression_training = LinearRegressionTraining(\n",
+    "    input_data_path,\n",
+    "    local_path_save,\n",
+    "    year_month,\n",
+    "    'linear_regression')\n",
+    "\n",
     "ridge_regression_training = LinearRegressionTraining(\n",
     "    input_data_path,\n",
     "    local_path_save,\n",
     "    year_month,\n",
-    "    'ridge')"
+    "    'ridge')\n",
+    "\n",
+    "lasso_regression_training = LinearRegressionTraining(\n",
+    "    input_data_path,\n",
+    "    local_path_save,\n",
+    "    year_month,\n",
+    "    'lasso')\n",
+    "\n",
+    "elastic_net_regression_training = LinearRegressionTraining(\n",
+    "    input_data_path,\n",
+    "    local_path_save,\n",
+    "    year_month,\n",
+    "    'elastic_net')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ccdb20c",
+   "id": "a4f2e9f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "max_evals = 5\n",
     "\n",
     "# Here we can decide which hyperparameters we want to tune\n",
+    "# For the Elastic Net regression, alpha tunes the amount of regularization\n",
+    "# Alpha = 0 means no regularization == Linear Regression\n",
+    "# l1_ratio is the mixing parameter: 0 means only L2 reg, 1 means only L1 reg\n",
+    "elastic_net_parameters_search = {\n",
+    "    'alpha': hp.lognormal('alpha', 0, 1),\n",
+    "    'l1_ratio': hp.uniform('l1_ratio', 0, 1),\n",
+    "    'random_state': seed\n",
+    "}\n",
+    "\n",
+    "elastic_net_regression_training.set_hyperparameter_space(elastic_net_parameters_search)\n",
+    "\n",
     "# For the Ridge regression, alpha tunes the amount of regularization\n",
     "# Alpha = 0 means no regularization == Linear Regression\n",
     "ridge_parameters_search = {\n",
@@ -113,7 +144,16 @@
     "    'random_state': seed\n",
     "}\n",
     "\n",
-    "ridge_regression_training.set_hyperparameter_space(ridge_parameters_search)"
+    "ridge_regression_training.set_hyperparameter_space(ridge_parameters_search)\n",
+    "\n",
+    "# For the Lasso regression, alpha tunes the amount of regularization\n",
+    "# Alpha = 0 means no regularization == Linear Regression\n",
+    "lasso_parameters_search = {\n",
+    "    'alpha': hp.lognormal('alpha', 0, 1),\n",
+    "    'random_state': seed\n",
+    "}\n",
+    "\n",
+    "lasso_regression_training.set_hyperparameter_space(lasso_parameters_search)"
    ]
   },
   {
@@ -136,6 +176,7 @@
     "shapes_pre = (X_train.shape[0], X_test.shape[0])\n",
     "X_train_ohe, ohe = prepr.preprocess(df=X_train, fit_ohe=True)\n",
     "X_test_ohe, _ = prepr.preprocess(df=X_test, fit_ohe=False, ohe=ohe)\n",
+    "\n",
     "assert shapes_pre == (X_train.shape[0], X_test.shape[0])\n",
     "dump(ohe, open(local_path_save + run_name + '_ohe.pkl', 'wb'))"
    ]
@@ -149,54 +190,37 @@
    },
    "outputs": [],
    "source": [
-    "trials = Trials()\n",
+    "models = [linear_regression_training,\n",
+    "         ridge_regression_training,\n",
+    "         lasso_regression_training,\n",
+    "         elastic_net_regression_training]\n",
     "\n",
-    "best_result = fmin(\n",
-    "    fn=partial(ridge_regression_training.objective_lr_ridge, \n",
-    "        X_train=X_train_ohe,\n",
-    "        X_test=X_test_ohe,\n",
-    "        Y_train=Y_train,\n",
-    "        Y_test=Y_test,\n",
-    "        run_name=run_name),\n",
-    "    space=ridge_parameters_search,\n",
-    "    algo=tpe.suggest,\n",
-    "    max_evals=max_evals,\n",
-    "    trials=trials,\n",
-    "    rstate=np.random.default_rng(seed)\n",
-    ")\n",
-    "\n",
-    "best_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a15bca3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "n_alphas = 10\n",
-    "alphas = np.random.lognormal(0, 0.5, n_alphas)\n",
-    "\n",
-    "coefs = []\n",
-    "for a in alphas:\n",
-    "    ridge = Ridge(alpha=a)\n",
-    "    ridge.fit(X_train_ohe, Y_train)\n",
-    "    coefs.append(ridge.coef_)\n",
+    "for model in models:\n",
+    "    trials = Trials() \n",
+    "    if model.model_name == 'linear_regression':\n",
+    "        best_result = model.objective_lr(X_train=X_train_ohe,\n",
+    "             X_test=X_test_ohe,\n",
+    "             Y_train=Y_train,\n",
+    "             Y_test=Y_test,\n",
+    "             run_name=run_name)\n",
+    "    else:\n",
+    "        objective_function = getattr(model, 'objective_lr_' + model.model_name)\n",
+    "        \n",
+    "        best_result = fmin(\n",
+    "            fn=partial(objective_function, \n",
+    "                X_train=X_train_ohe,\n",
+    "                X_test=X_test_ohe,\n",
+    "                Y_train=Y_train,\n",
+    "                Y_test=Y_test,\n",
+    "                run_name=run_name),\n",
+    "            space=model.hp_space,\n",
+    "            algo=tpe.suggest,\n",
+    "            max_evals=max_evals,\n",
+    "            trials=trials,\n",
+    "            rstate=np.random.default_rng(seed)\n",
+    "        )\n",
     "    \n",
-    "ax = plt.gca()\n",
-    "\n",
-    "neg_log_alphas_ridge = -np.log10(alphas)\n",
-    "\n",
-    "ax.plot(neg_log_alphas_ridge, coefs)\n",
-    "#ax.set_xlim(ax.get_xlim()[::-1])\n",
-    "plt.xlabel(\"alpha\")\n",
-    "plt.ylabel(\"weights\")\n",
-    "plt.title(\"Ridge coefficients as a function of the regularization\")\n",
-    "plt.axis(\"tight\")\n",
-    "plt.show()"
+    "    best_result"
    ]
   }
  ],
